	PR c++/84785 - ICE with alias template and default targs.

* pt.c (type_unification_real): Set processing_template_decl if
	saw_undeduced == 1.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@258407 138bc75d-0d04-0410-961f-82ee72b054a4